--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -29,5 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.android.support:design:28.0.0'
-
+    implementation 'com.google.firebase:firebase-database:16.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
