--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nguyen.huy.moneylover">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".Authentication.SplashScreenActivity"></activity>
+        <activity android:name=".Authentication.ForgetPasswordActivity" />
+        <activity android:name=".Authentication.SignUpActivity" />
+        <activity android:name=".Authentication.LogInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainHoang.ThemTietKiemActivity"></activity>
+        <activity android:name=".MainHoang.ThemTietKiemActivity" />
         <activity android:name=".MainHoang.TietKiemActivity" />
-        <activity android:name=".MinhLayout.DocActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity
+            android:name=".MinhLayout.DocActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".MainTruong.MainKeHoach"
             android:theme="@style/Theme.AppCompat.Light" />
