--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Authentication.SplashScreenActivity"></activity>
+        <activity android:name=".MainTruong.DetailKeHoachActivity"></activity>
+        <activity android:name=".Authentication.SplashScreenActivity" />
         <activity android:name=".Authentication.ForgetPasswordActivity" />
         <activity android:name=".Authentication.SignUpActivity" />
         <activity android:name=".Authentication.LogInActivity" />
