--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".MainTruong.DetailKeHoachActivity"></activity>
-        <activity android:name=".Authentication.SplashScreenActivity" />
-        <activity android:name=".Authentication.ForgetPasswordActivity" />
-        <activity android:name=".Authentication.SignUpActivity" />
-        <activity android:name=".Authentication.LogInActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Authentication.SplashScreenActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".Authentication.ForgetPasswordActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".Authentication.SignUpActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".Authentication.LogInActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
         </activity>
         <activity android:name=".MainHoang.ThemTietKiemActivity" />
         <activity android:name=".MainHoang.TietKiemActivity" />
