--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
+        android:name=".Authentication.MyFirebaseApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".QRCodeModule.QRCodeScannerActivity"></activity>
+        <activity android:name=".QRCodeModule.QRCodeScannerActivity"
+            android:theme="@style/AppTheme"></activity>
         <activity android:name=".MainTruong.DetailKeHoachActivity" />
         <activity
             android:name=".Authentication.SplashScreenActivity"
