--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".Authentication.UserInfoActivity"></activity>
         <activity android:name=".QRCodeModule.QRCodeScannerActivity"
             android:theme="@style/AppTheme"></activity>
         <activity android:name=".MainTruong.DetailKeHoachActivity" />
