--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.github.razerdp:AnimatedPieView:1.2.4'
 
 }
 
