--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,13 @@
     <application
         android:name=".Authentication.MyFirebaseApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_bkwallet"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".Report.Report2Activity"
-            android:theme="@style/Theme.AppCompat.Light" />
-        <activity
-            android:name=".Report.ReportActivity"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:name=".Report.ReportActivity" />
         <activity android:name=".Authentication.UserInfoActivity" />
         <activity
             android:name=".QRCodeModule.QRCodeScannerActivity"
