--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,17 +40,11 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity
-            android:name=".MainTietKiem.ThemTietKiem"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:name=".MainEconomy.MainEconomy" />
         <activity
-            android:name=".MainTietKiem.MainTietKiem"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:name=".MainEconomy.EditAndDeleteEconomy" />
         <activity
-            android:name=".MainTietKiem.detail_tietkiem"
-            android:theme="@style/Theme.AppCompat.Light" />
-        <activity
-            android:name=".MainTietKiem.SuaVaXoaTietKiem"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:name=".MainEconomy.AddEconomy" />
         <activity
             android:name=".Transaction.View.DetailTransactionActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
